UNAO-439: Fixing misaligned text on right side
git-svn-id: https://svn.otpartners.com/svn/Poses/trunk@1701 7f4e098a-8ec1-c442-913e-02cc3c41ae5c

--- a/UnderstoodDotOrg.Web/Presentation/Includes/css/account.css
+++ b/UnderstoodDotOrg.Web/Presentation/Includes/css/account.css
@@ -1408,7 +1408,7 @@
     margin-left: 1%;
     line-height: 16px;
     vertical-align: top;
-    margin-top: 15px;
+    margin-top: 32px;
   }
 }
 @media (min-width: 960px), print {
